Fix overflow and css grid issue that prevented auto-fit for working distributing the cards as the horizontal space increases.

--- a/src/styles.css
+++ b/src/styles.css
@@ -94,12 +94,13 @@ h1 {
     overflow-x: hidden;
     scrollbar-color: black;
     scrollbar-width: thin;
+    scrollbar-gutter: stable;
     margin-right: 10px;
     padding: 10px;
     outline: none;
     justify-content: center;
     max-width: 1400px;
-    min-height: 0;
+    width: 100%;
 }
 
 .card {
